--- a/default.hbs
+++ b/default.hbs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/bastard.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{{asset "css/normalize.css"}}">
   
 
     {{! Touch icons and favicon }}
