--- a/default.hbs
+++ b/default.hbs
@@ -68,8 +68,8 @@
             <div class="row">
              <section class="copyright">All content copyright <a href="http://creativecommons.org/licenses/by-sa/4.0/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
                 <!--  <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section> -->
-                 <!-- <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a> and the <a href="http://github.com/misterGF/swaggy-bastard"><strong>Swaggy Bastard</strong></a> Theme</section>  -->
-                 <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a> by <a href="http://twitter.com/diego00aq"><strong>Diego</strong></a></section> 
+                 <!-- <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a> and the <a href="https://github.com/DIEGO00AQ/Thin-Bastard"><strong>Thin Bastard</strong></a> Theme</section>  -->
+                 <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a> by <a href="http://twitter.com/diego00aq"><strong>Diego</strong></a> and the <a href="https://github.com/DIEGO00AQ/Thin-Bastard"><strong>Thin Bastard</strong></a> Theme</section> 
             </div>
             <div class="row">
                  <a id="scroll-to-top" class="pull-right" href="#top"><i class="fa fa-chevron-circle-up fa-3x"></i></a>
