--- a/assets/css/bastard.css
+++ b/assets/css/bastard.css
@@ -2143,24 +2143,34 @@ button.close { padding: 0; cursor: pointer; background: transparent; border: 0; 
 @media (max-width: 767px) { .visible-xs { display: block !important; }
   table.visible-xs { display: table; }
   tr.visible-xs { display: table-row !important; }
-  th.visible-xs, td.visible-xs { display: table-cell !important; } }  .post-excerpt p { font-family: Arial; text-align: justify; text-justify: inter-word; padding-top: 2rem; } /*.post img { float: left; //margin: 0 5px 15px 0;// //width: 400px;//   position: relative;
-  overflow: hidden;
-  cursor: pointer;
-    //margin: auto;//
-  background-color: white;
-  padding-right: 1rem; 
-  display: block;
-  max-width: 100%;
-  margin: 0 auto; }*/
-  .post img {
-	max-width: 100%;
-	position: relative;
-	display: block;
-	vertical-align: middle;
-	padding: -1em -1em -1em -1em;
+  th.visible-xs, td.visible-xs { display: table-cell !important; } }  
 
-	}
-@media (max-width: 767px) { .visible-xs-block { display: block !important; } }
+
+@media (max-width: 767px) { .visible-xs-block { display: block !important; }
+.post-excerpt {
+  margin: 0 2em;
+  font-size: 12px;
+  padding: 0;
+}
+.post-read-more-btn {
+/*margin-top: 0.625rem;
+  margin-bottom: 0.625rem;*/
+  display: inline-block;
+  padding: 0.625rem 1.875rem;
+  border: 2px solid #757575;
+  border-bottom: 0;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+  color: #23222D;
+  font-size: 11px;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s; 
+   } 
+.dsq-brlink {
+  padding: 0 1em;
+ }
+}
 
 @media (max-width: 767px) { .visible-xs-inline { display: inline !important; } }
 
@@ -3398,7 +3408,21 @@ navbar { margin-bottom: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.3); te
 .top-ornament { background: url(../images/top-ornament.svg) no-repeat top center; margin: 0 auto; position: relative; height: 59px; border-top: rgba(235, 242, 246, 0.29) 1px solid; }
 
 /* Every post, on every page, gets this style on its <article> tag */
-.post { position: relative; width: 80%; max-width: 100%; margin: 4rem auto; padding: 4rem 4rem 4rem 4rem; word-break: break-word; hyphens: auto; /*border: 5px solid #757575;*/ overflow: hidden; background: #FFF; box-shadow: 20px 20px #ccc; border-bottom: solid 5px #757575; font-size: 16px; font-family: Arial; }
+.post {
+  position: relative;
+  width: 80%;
+  max-width: 100%;
+  margin: 4rem auto;
+  /*padding: 4rem 4rem 4rem 4rem;*/
+  word-break: break-word;
+  hyphens: auto;
+  overflow: hidden;
+  background: #FFF;
+  box-shadow: 10px 10px #ccc;
+  border-bottom: solid 5px #757575;
+  font-size: 16px;
+  font-family: Arial;
+}
 .post:after {
     border: 0;
     height: 1px;
@@ -3412,18 +3436,22 @@ navbar { margin-bottom: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.3); te
 .post-title {  margin: 0; text-align: center }
 .post-title a { text-decoration: none; }
 
-.post-excerpt p { margin: 1.6rem 0 0 0; font-size: 16px; line-height: 2em; color: #828282; width: 90%; text-align: left; /*padding: 0 0 0 4rem;*/ }
-/*.post img { float: left; //margin: 0 5px 15px 0;// //width: 400px;//   position: relative;
-  overflow: hidden;
-  cursor: pointer;
-    margin: auto;
-  background-color: white;
-  padding-right: 1rem; 
-  display: block;
-  max-width: 100%;
-  margin: 0 auto;*/ }
+.post-excerpt p {
+  font-family: Arial;
+  text-align: justify;
+  text-justify: inter-word;
+  padding-top: 2rem;
+}
+
+.post figure {
+  margin: 0;
+}
+
 .post img {
-	width: 100px;
+  float: left;
+	max-width: 100%;
+  width: 350px;
+  margin: 0 1em 0 0;
 
 }
 
@@ -3450,6 +3478,7 @@ h1.post-title { color: #005B9A; }
 
 /* Stop .full-img from creating horizontal scroll - slight hack due to imperfections with browser width % calculations and rounding */
 .post-template .content { overflow: hidden; }
+.post-template section { font-size: 16px; font-family: Arial; margin: 1em 1em; }
 .post-template .post { margin-top: 1em; border-bottom: none; padding-bottom: 0; }
 .post-template .post:after { display: none; }
 .post-template .post-header { padding: 60px 0; text-align: center; }
@@ -3638,15 +3667,22 @@ margin: .2em;}
 ul {  list-style-type: none; }
 
 
-.post-read-more-btn {   margin-top: 0.625rem;
-  margin-bottom: 0.625rem;
+.post-read-more-btn {
+/*margin-top: 0.625rem;
+  margin-bottom: 0.625rem;*/
   display: inline-block;
   padding: 0.625rem 1.875rem;
-  border: 2px solid #000;
+  border: 2px solid #757575;
+  border-bottom: 0;
   font-weight: 900;
   text-transform: uppercase;
   text-align: center;
   color: #23222d;
   font-size: 11px;
   -webkit-transition: background-color .3s;
-  transition: background-color .3s; }
+  transition: background-color .3s; 
+  display: flex;
+   }
+   .dsq-brlink {
+  margin: 0 1em;
+ }
