--- a/index.hbs
+++ b/index.hbs
@@ -48,14 +48,12 @@
         </header>
         <section class="post-excerpt">
 
-              
-             
-            <p>
+            <section class="Post-text">
 
                 {{excerpt}}&hellip;
                 
                 <br style="clear: both;" />
-            </p>
+            </section>
     
             <div>
                 <a href="{{url}}" class="post-read-more-btn">Leer más ...</a>
