--- a/assets/css/bastard.css
+++ b/assets/css/bastard.css
@@ -191,9 +191,9 @@ html { font-family: "Open Sans"; -ms-text-size-adjust: 100%; -webkit-text-size-a
 
 body { margin: 0; font-family: 'Open Sans' }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { display: block; }
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary { display: block; }
 
-main { background: #F2F2F2; padding: 1.5em; }
+main { /*background: #F2F2F2;*/ background: #FFF; padding: 0; display: flex; flex-direction: column; }
 
 audio, canvas, progress, video { display: inline-block; vertical-align: baseline; }
 
@@ -822,7 +822,7 @@ ul ul, ul ol, ol ul, ol ol { margin-bottom: 0; }
 
 .list-unstyled, .list-inline { padding-left: 0; list-style: none; }
 
-.list-inline { margin-left: -5px; }
+.list-inline { margin-left: -5px; order: 2; }
 .list-inline > li { display: inline-block; padding-left: 5px; padding-right: 5px; font-family: "Myriad Set Pro"}
 
 .list-inline-skills { margin-left: -5px; padding: 0 0 5em 0; }
@@ -871,7 +871,7 @@ pre code { padding: 0; font-size: inherit; color: inherit; white-space: pre-wrap
 
 .pre-scrollable { max-height: 340px; overflow-y: scroll; }
 
-.container { margin-right: auto; margin-left: auto; padding-left: 15px; padding-right: 15px; }
+.container { margin-right: auto; margin-left: auto; padding-left: 15px; padding-right: 15px; order: 2; }
 .container:before, .container:after { content: " "; display: table; }
 .container:after { clear: both; }
 @media (min-width: 768px) { .container { width: 750px; } }
@@ -2146,35 +2146,7 @@ button.close { padding: 0; cursor: pointer; background: transparent; border: 0; 
   th.visible-xs, td.visible-xs { display: table-cell !important; } }  
 
 
-@media (max-width: 767px) { .visible-xs-block { display: block !important; }
-    
-.post-excerpt {
-  margin: 0 1em;
-  font-size: 14px;
-  padding: 0;
-
-}
-.post figure {
-    margin: 0 auto;
-}
-.post-read-more-btn {
-/*margin-top: 0.625rem;
-  margin-bottom: 0.625rem;*/
-  display: block;
-  padding: 0.5em .5em;
-  font-weight: 900;
-  text-transform: uppercase;
-  justify-content: space-around;
-  color: #23222d;
-  font-size: 11px;
-  -webkit-transition: background-color .3s;
-  transition: background-color .3s; 
-  display: flex;
-   }
-.dsq-brlink {
-  padding: 0 1em;
- }
-}
+@media (max-width: 767px) { .visible-xs-block { display: block !important; } }
 
 @media (max-width: 767px) { .visible-xs-inline { display: inline !important; } }
 
@@ -2591,7 +2563,7 @@ button.close { padding: 0; cursor: pointer; background: transparent; border: 0; 
 .fa-phone-square:before { content: "\f098"; }
 
 .fa-twitter:before { content: "\f099"; }
-.fa-twitter:hover { color: deepskyblue }
+.fa-twitter:hover { color: deepskyblue; }
 
 .fa-facebook:before { content: "\f09a"; }
 
@@ -3215,7 +3187,7 @@ body { color: white; height: 100%; max-height: 100%; font-family: 'Noto Serif', 
 
 ::-moz-selection, ::selection { color: #222; background: #D6EDFF; text-shadow: none; }
 
-h1, h2, h3, h4, h5, h6 { text-rendering: optimizeLegibility; line-height: 1; margin-top: 0; font-family: 'Open Sans', sans-serif; }
+h1, h2, h3, h4, h5, h6 { text-rendering: optimizeLegibility; line-height: 1; margin-top: 1.5em; font-family: 'Open Sans', sans-serif; }
 
 h1 { font-size: 4.5rem; line-height: 1.2em; letter-spacing: -2px; text-indent: -3px; }
 
@@ -3234,7 +3206,7 @@ a:hover { color: #005B9A; }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: #50585D; }
 
-p, ul, ol, dl { margin: 1.6em 0; }
+p, ul, ol, dl { /*margin: 1.6em 0;*/ margin: auto; }
 
 ol ol { margin: 0.4em 0; }
 
@@ -3295,7 +3267,8 @@ margin on the iframe, cause it breaks stuff. */
 .hidden { text-indent: -9999px; visibility: hidden; display: none; }
 
 /* Creates a responsive wrapper that makes our content scale nicely */
-.inner { position: relative; width: 80%; max-width: 700px; margin: 0 auto; }
+.inner { position: relative; width: 80%; max-width: 700px; margin: 0 auto;   display: flex;
+  flex-direction: row; }
 
 /* Centres vertically yo. (IE8+) */
 .vertical { display: table-cell; vertical-align: middle; }
@@ -3329,7 +3302,7 @@ navbar { margin-bottom: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.3); te
 .btn-circle:hover, .btn-circle:focus {
     outline: 0;
     color: #fff;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, .25);
 }
 
 .page-scroll .btn-circle i.animated {
@@ -3394,7 +3367,7 @@ navbar { margin-bottom: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.3); te
 
 /* ========================================================================== 4. General - The main styles for the the theme ========================================================================== */
 /* Panel Overlay */
-.panel-cover-overlay { display: block; position: absolute; z-index: 0; top: 0; right: 0; bottom: 0; left: 0; background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 20%, rgba(0, 0, 0, 0.7)); }
+.panel-cover-overlay { display: block; position: absolute; z-index: 0; top: 0; right: 0; bottom: 0; left: 0; background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.38) 20%, rgba(255, 255, 255, 0)); }
 
 /* Bigass cover image on the home page */
 .site-head { position: relative; display: table; width: 100%; height: 100%; text-align: center; color: #bbbbbb; background: url(../images/cover.jpg) no-repeat center center; background-size: cover; }
@@ -3415,18 +3388,21 @@ navbar { margin-bottom: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.3); te
 .post {
   display: inline-block;
   position: relative;
-    width: auto;
+  width: 350px;
   max-width: 100%;
-  margin: 0 2% 1em 0;
-  /*padding: 4rem 4rem 4rem 4rem;*/
+  margin: 1.5em;
+  /* padding: 4rem 4rem 4rem 4rem; */
   word-break: break-word;
   hyphens: auto;
   overflow: hidden;
   background: #FFF;
-  box-shadow: 0 6px 12px 1px #aaa;
-  border-bottom: solid 5px #757575;
+  /* box-shadow: 0 6px 12px 1px #aaa; */
+  border-bottom: solid 1px #ff6f00;
   font-size: 16px;
-  font-family: "Lato", "Open Sans";
+  font-family: "Lato" sans-serif;
+  font-weight: 300;
+  height: auto;
+  order: 1;
 }
 .post:after {
     border: 0;
@@ -3438,36 +3414,47 @@ navbar { margin-bottom: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.3); te
 }
 
 /* Add a little circle in the middle of the border-bottom on our .post just for the lolz and stylepoints. */
-.post-title {  margin: 0; text-align: center }
+.post-title {  margin: 0; text-align: center; font-family: "Lato" sans-serif;
+  font-weight: 300; }
 .post-title a { text-decoration: none; }
 
 .post-excerpt {
   font-family: "Lato" sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   margin: 0 1em;
 }
 .post-excerpt p {
   display: inline;
   text-align: justify;
   text-justify: inter-word;
-  padding: 2rem 2rem 0 0;
+  padding: 0;
   
+}
+.post-excerpt div {
+ text-align: center;
 }
 
 
 
 .post figure {
   margin: 0;
+  text-align: center;
 }
 
 .post img {
   /*float: left;*/
 	max-width: 100%;
-    width: auto;
-
+    width: 100%;
+      filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(0%); /* Chrome 19+ & Safari 6+ */
+}
+.post img:hover {
+    filter: none;
+    -webkit-filter: grayscale(75%);
 }
 
-.post-meta { display: inline-block; margin: 0 0 5px 0; font-family: 'Open Sans', sans-serif; font-size: 1.5rem; color: #9EABB3; }
+.post-meta { display: block; margin: 0 0 5px 0; font-family: 'Open Sans', sans-serif; font-size: 1.5rem; color: #FF6F00; text-align: center; }
 .post-meta a { color: #9EABB3; text-decoration: none; }
 .post-meta a:hover { text-decoration: underline; }
 
@@ -3486,29 +3473,38 @@ navbar { margin-bottom: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.3); te
 .publish-date { display: block; font-size: 1.4rem; line-height: 1.5em; }
 
 /* ========================================================================== 6. Single Post - When you click on an individual post ========================================================================== */
-h1.post-title { color: #005B9A; }
+h1.post-title { /* color: #005B9A; */ color: #000; }
 
 /* Stop .full-img from creating horizontal scroll - slight hack due to imperfections with browser width % calculations and rounding */
 .post-template .content { overflow: hidden; }
-.post-template section { font-size: 16px; font-family: Arial; margin: 1em 1em; }
-.post-template .post { margin-top: 1em; border-bottom: none; padding-bottom: 0; }
+.post-template section { font-size: 16px;
+  font-family: 'lato', 'sans-serif';
+  margin: 1em 1em;
+  font-weight: 300; }
+.post-template .post { 
+    margin-top: 0; border-bottom: none; padding-bottom: 0; 
+    width: auto; font-size: 18px; height: auto; margin: 0;
+}
+.post-template .post figure img {
+    width: 100%; background-color: #191919;
+}
 .post-template .post:after { display: none; }
 .post-template .post-header { padding: 60px 0; text-align: center; }
-.post-template .blog-title { display: inline-block; padding: 2.5rem 0; }
+.post-template .blog-title { display: inline-block; padding: 2.5rem 0; font-weight: 600; font-size: 48px; }
 .post-template h2, .post-template h3, .post-template h4 { color: #333; }
 
 /* Tweak the .post wrapper style */
 /* Kill that stylish little circle that was on the border, too */
 /* Insert some mad padding up in the header for better spacing */
 /* Keep images centred and within the bounds of the post-width */
-.post-content { color: #333; text-align: justify }
+.post-content { color: #333; text-align: justify; border-top: solid 1px #FF600F; }
 .post-content img { display: block; max-width: 100%; height: auto; margin: 0 auto; padding: 0.6em 0; }
 .post-content .full-img { width: 100%; max-width: none; margin: 0 0; }
 .post-content code { color: #993030; }
 
 /* Break out larger images to be wider than the main text column the class is applied with jQuery */
 /* The author credit area after the post */
-.post-footer { position: relative; margin: 4rem 0 0 0; padding: 4rem 0 0 0; border-top: rgba(235, 242, 246, 0.29) 1px solid; }
+.post-footer { position: relative; margin: 4rem 0 0 0; padding: 4rem 0 0 0; border-top: rgba(235, 242, 246, 0.29) 1px solid; order: 3; }
 .post-footer h4 { font-size: 1.8rem; margin: 0; }
 .post-footer p { margin: 1rem 0; font-size: 1.4rem; line-height: 1.6em; }
 
@@ -3598,15 +3594,15 @@ h1.post-title { color: #005B9A; }
 .site-nav-logo { position: fixed; left: 10px; top: 10px; width: 45px; height: 45px; background-color: rgba(255, 255,255, 0.6); border-radius: .5em; overflow: hidden; z-index: 99; }
 .site-nav-logo .logo { display: block; position: absolute; top: 5px; left: 5px; width: 35px; height: 35px; border-radius: 100%; background-size: cover; background-repeat: no-repeat; }
 
-#slidemenu-wrapper { margin-left: -250px; left: 0; width: 250px; background: #54585b; opacity: 0.7; position: fixed; height: 100%; overflow-y: auto; z-index: 1000; -webkit-transition: all 0.4s ease 0s; -moz-transition: all 0.4s ease 0s; -ms-transition: all 0.4s ease 0s; -o-transition: all 0.4s ease 0s; transition: all 0.4s ease 0s; }
+#slidemenu-wrapper { margin-left: -250px; left: 0; width: 250px; background: #54585b; opacity: 0.7; position: fixed; height: 100%; overflow-y: auto; z-index: 1000; -webkit-transition: all 0.4s ease 0s; -moz-transition: all 0.4s ease 0s; -ms-transition: all 0.4s ease 0s; -o-transition: all 0.4s ease 0s; transition: all 0.4s ease 0s; border-right: solid 1px #FF6F00; }
 #slidemenu-wrapper a { color: #FFFFFF; }
 #slidemenu-wrapper a:active, #slidemenu-wrapper a:focus { color: #428bca; }
-#slidemenu-wrapper a:hover { color: #FFFFFF; /*background: #FFFFFF;*/ }
+#slidemenu-wrapper a:hover { color: #FF6F00;; background: #FFF; opacity: 1; border: solid 1.5px #FF6F00; }
 
 .slidemenu-nav { color: #999999; position: absolute; top: 0; width: 250px; list-style: none; margin: 0; padding: 1em; }
 .slidemenu-nav li { font-size: 14px; line-height: 35px; text-indent: 5px; padding: .5em; }
 .slidemenu-nav li a { color: #999999; display: block; text-decoration: none; }
-.slidemenu-nav li a:hover { padding-top: .5em; color: #005B9A; background: rgba(0, 0, 0, 0.9); text-decoration: none; /*text-align: center*/}
+.slidemenu-nav li a:hover { color: #005B9A; background: rgba(0, 0, 0, 0.9); text-decoration: none; /*text-align: center*/}
 .slidemenu-nav li a:active, .slidemenu-nav li a:focus { text-decoration: none; }
 .slidemenu-nav li a i { margin-right: 10px; }
 
@@ -3622,7 +3618,7 @@ h1.post-title { color: #005B9A; }
   .blog-title { font-size: 4rem; letter-spacing: -1px; }
   .blog-description { font-size: 1.6rem; line-height: 1.4em; }
   .blog-logo img { max-height: 90px; max-width: 320px; }
-  .post { font-size: 0.9em; line-height: 1.6em; }
+  .post { font-size: 1em; line-height: 1.6em; width: auto; height: auto; }
   .post-template .post { padding-bottom: 1rem; }
   .post-template .post-header { padding: 40px 0; }
   h1 { font-size: 4.8rem; text-indent: -2px; }
@@ -3630,12 +3626,20 @@ h1.post-title { color: #005B9A; }
   h3 { font-size: 3.3rem; }
   h4 { font-size: 2.8rem; }
   .site-footer { margin-top: 5rem; font-size: 0.9rem; }
-  .btn-social { width: 38px; height: 38px; border: 1px solid #bbbbbb; font-size: 18px; line-height: 38px;} }
+  .btn-social { width: 38px; height: 38px; border: 1px solid #bbbbbb; font-size: 18px; line-height: 38px;} 
+
+.inner {
+    flex-direction: column; }
+.full-img {
+  max-width: 100%;
+  width: 50%; }
+
+}
 /* ========================================================================== Media Queries - Smaller than 500px ========================================================================== */
 @media only screen and (max-width: 500px) { .site-nav-logo { position: relative; }
   .blog-logo img { max-height: 80px; max-width: 210px; }
   .inner, .pagination { width: auto; margin-left: 16px; margin-right: 16px; }
-  .post { width: auto; margin-left: 16px; margin-right: 16px; font-size: 0.8em; line-height: 1.6em; }
+  .post { width: auto; margin: 0; font-size: 1em; line-height: 1.6em; }
   .site-head { padding: 10% 0; height: 100%; }
   .blog-title { font-size: 3rem; }
   .blog-description { font-size: 1.5rem; }
@@ -3657,7 +3661,13 @@ h1.post-title { color: #005B9A; }
   .older-posts, .newer-posts { position: static; margin: 10px 0; }
   .page-number { display: block; }
   .site-footer { margin-top: 6rem; font-size: 0.7rem; }
-  .btn-social { width: 32px; height: 32px; border: 1px solid #bbbbbb; font-size: 15px; line-height: 30px; } }
+  .btn-social { width: 32px; height: 32px; border: 1px solid #bbbbbb; font-size: 15px; line-height: 30px; } 
+
+.post {
+    display: inline-block;
+    margin: 1em 0;
+    width: auto;
+} }
 /* ========================================================================== End of file. Media queries should be the last thing here. Do not add stuff below this point, or it will probably fuck everything up. ========================================================================== */
 
 hr.swaggy {
@@ -3680,16 +3690,57 @@ ul {  list-style-type: none; }
 
 
 .post-read-more-btn {
-/*margin-top: 0.625rem;
-  margin-bottom: 0.625rem;*/
-  display: block;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  display: inline-block;
   padding: 0.5em .5em;
-  font-weight: 900;
+  font-family: 'lato', 'sans-serif';
+  font-weight: 400;
+  font-size: 13px;
   text-transform: uppercase;
-  justify-content: space-around;
-  color: #23222d;
-  font-size: 11px;
+  text-align: center;
+  color: #FF600F;
   -webkit-transition: background-color .3s;
   transition: background-color .3s; 
-  display: flex;
+    border: solid 1px #FF600F;
+    border-radius: 1em 0;
    }
+
+.head-intro {
+    order: 2;
+}
+
+/* ================================== Extra Queries ==================== */
+@media only screen and (min-width: 900px) {
+    main {
+        flex-direction: row;
+    }
+    .post{
+        width: 900px;
+        max-width: 100%;
+    }
+    .post-template .content {
+        overflow: hidden; 
+        flex-direction: column;
+    }
+    .list-inline {
+        margin-left: -5px;
+        order: 2;
+        width: inherit;
+    }
+}
+@media only screen and (min-width: 1200px) {
+    main {
+        flex-direction: column;
+    }
+    .post{
+        width: auto;
+        max-width: 100%;
+    }
+}
+
+/* =================== End Extra Queries =================== */
+#disqus_thread {
+    order: 4;
+    margin: 1em;
+}
