--- a/index.hbs
+++ b/index.hbs
@@ -10,14 +10,18 @@
     <div class="panel-cover-overlay"></div>
     <div class="vertical">
         <div class="site-head-content inner">
-            {{#if @blog.logo}}
-                <img src="{{@blog.logo}}" alt="Blog Logo" />
-            {{else}}
-                <h1 class="blog-title">{{@blog.title}}</h1>
-            {{/if}}    
-            <h2 class="blog-description">{{@blog.description}}</h2>
-            {{! Social Links }}
-            {{> social }}
+            <div>
+                {{#if @blog.logo}}
+                    <img src="{{@blog.logo}}" alt="Blog Logo" />
+                {{else}}
+                    <h1 class="blog-title">{{@blog.title}}</h1>
+                {{/if}}    
+                <h2 class="blog-description">{{@blog.description}}</h2>
+            </div>
+            <div
+                {{! Social Links }}
+                {{> social }}
+            <div>
 
             <div class="page-scroll">
                 <a href="#main" class="btn btn-circle scroll">
