--- a/post.hbs
+++ b/post.hbs
@@ -9,16 +9,17 @@
         
         {{! Everything inside the #post tags pulls data from the post }}
         {{#post}}
-
+    <header class="post-header-title">
         <figure class="in-Post-image">
              {{#if image}}
                <img src="{{image}}"></img> 
             {{/if}} 
-        </figure> 
+        </figure>
+        <h1 class="post-title">{{{title}}}</h1>
+    </header>
         
             <span class="post-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format='MMMM Do, YYYY'}}</time> {{tags prefix="on " separator=" | "}}</span>
 
-            <h1 class="post-title">{{{title}}}</h1>
 
             <section class="post-content">
                 {{content}}
